<resources>
    <string name="app_name">JustoCallenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_string_place">Email: %s</string>
    <string name="phone_string_place">Phone: %s</string>
    <string name="city_string_place">City: %s</string>
    <string name="state_string_place">State: %s</string>
    <string name="title_address">Address</string>
    <string name="title_contact_information">Contact information</string>
    <string name="title_detail">User Detail</string>
    <string name="title_user_list">User List</string>
</resources>